# TELECOM-TOWER-POWER

./: --region sa-east-1 elbv2 describe-target-health --target-group-arn --query TargetHealthDescriptions[].[Target.Id,Target.Port,TargetHealth.State] --output text  .dockerignore  .env.example  .env.onprem.example  .gitignore  .railwayignore  .samignore  :[  ===".save  CONTRIBUTING.md  Caddyfile  DPA-LGPD-SUMMARY.md  DPA-LGPD.md  Dockerfile  Dockerfile.gpu  Dockerfile.signal-server-builder  EULA-SUMMARY.md  EULA.md  LICENSE  LICENSE-DATA.md  LICENSE.md  LICENSE.previous-commercial.md  Makefile  NOTICE  Procfile  README.md  ROADMAP.md  ROI.md  SECURITY.md  alembic.ini  alertmanager.yml  analyze_out.txt  anatel_validator.py  api_client.py  audit_log.py  batch_gpu_interference_worker.py  batch_worker.py  bedrock_service.py  budgets delete-budget --account-id 490083271496 --budget-name MonthlySpendBudget  check_creds.py  (+126 more)
.aws-sam/: build.toml
.github/: dependabot.yml
.streamlit/: config.toml
ERBs_per_city_per_operators_brazil/: README.md
alertmanager/: Dockerfile  alertmanager.yml.tpl  entrypoint.sh
artifacts/: df_stratified_comparison.json  df_stratified_comparison.md
auth/: __init__.py  saml_service.py
data/: materials_p2040.json
docs/: FAILOVER.md  RAILWAY.md  RAILWAY_CLEANUP_RUNBOOK.md  lai_request_coordinates.md  (+1 more)
docs-site/: README.md  mkdocs.yml  requirements.txt  ssm get-command-invocation \
rf_signals/: .gitignore  Cargo.toml
rf_signals/src/: main.rs  models.rs
scripts/rf_signals_cli/: Cargo.toml
scripts/rf_signals_cli/src/: main.rs
(+441 files in other folders)
