[package]
name = "rfsignals-cli"
version = "0.1.0"
edition = "2021"
description = "TELECOM-TOWER-POWER CLI shim around thebracket/rf-signals"
license = "LicenseRef-TTP-Proprietary"

[[bin]]
name = "rfsignals-cli"
path = "src/main.rs"

[dependencies]
rf-signals = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
